# tyrano-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md  first.ks  language-configuration.json  package-lock.json  package.json  test_simple.ks  title.ks
.github/: issue_template.md
crates/tyrano-lsp/: Cargo.toml
crates/tyrano-lsp/src/: lib.rs  main.rs  position.rs  server.rs  session.rs
crates/tyrano-lsp/src/ide/: completion.rs  cursor.rs  goto.rs  hover.rs  mod.rs  references.rs  symbols.rs
crates/tyrano-lsp/tests/: protocol.rs
crates/tyrano-parser-generator/: ARCH.md  Cargo.toml  build.rs
crates/tyrano-parser-generator/src/: ast.rs  cli.rs  codegen.rs  generator.rs  grammar.rs  lib.rs  main.rs  parser.rs  state.rs  visualizer.rs
crates/tyrano-parser-generator/src/ast/: node.rs
crates/tyrano-parser-generator/src/codegen/: cst_codegen.rs  grammar_meta_codegen.rs  parser_codegen.rs  tables_codegen.rs
crates/tyrano-parser-generator/src/generator/: table_generator.rs
crates/tyrano-parser-generator/src/grammar/: grammar_parser.rs  production.rs  symbol.rs
crates/tyrano-parser-generator/src/parser/: lr_parser.rs  parse_table.rs
crates/tyrano-parser-generator/src/state/: lr_state.rs  state_machine.rs
crates/tyrano-parser-generator/src/visualizer/: automaton_visualizer.rs  table_visualizer.rs
crates/tyrano-parser-generator/tests/: parser_compat.rs
crates/tyrano-semantic/: Cargo.toml
crates/tyrano-semantic/src/: codes.rs  deps.rs  labels.rs  lib.rs  model.rs
crates/tyrano-semantic/src/check/: kind.rs  mod.rs  tags.rs  xfile.rs
crates/tyrano-semantic/tests/: golden.rs  incremental.rs
crates/tyrano-semantic/tests/data/cross_jump_missing_file/: expected.diag
crates/tyrano-semantic/tests/data/cross_jump_missing_label/: expected.diag
crates/tyrano-semantic/tests/data/expanded_builtins/: assets.list  expected.diag
crates/tyrano-semantic/tests/data/kind_mismatches/: assets.list  expected.diag
crates/tyrano-semantic/tests/data/missing_asset/: assets.list  expected.diag
(+182 files in other folders)
