[workspace]
members = [
    "crates/tyrano-analysis",
    "crates/tyrano-cli",
    "crates/tyrano-db",
    "crates/tyrano-lexer",
    "crates/tyrano-lsp",
    "crates/tyrano-module-resolver",
    "crates/tyrano-parser",
    "crates/tyrano-parser-core",
    "crates/tyrano-parser-debugger",
    "crates/tyrano-parser-generator",
    "crates/tyrano-project",
    "crates/tyrano-semantic",
    "crates/tyrano-syntax",
]

resolver = "2"
