[package]
name = "tyrano-lsp"
version = "0.1.0"
edition = "2024"
description = "Language Server Protocol implementation for TyranoScript"
license = "MIT"

[[bin]]
name = "tyrano-lsp"
path = "src/main.rs"

[dependencies]
tyrano-db = { path = "../tyrano-db" }
tyrano-module-resolver = { path = "../tyrano-module-resolver" }
tyrano-parser-core = { path = "../tyrano-parser-core" }
tyrano-project = { path = "../tyrano-project" }
tyrano-semantic = { path = "../tyrano-semantic" }
tyrano-syntax = { path = "../tyrano-syntax" }

anyhow = "1"
crossbeam-channel = "0.5"
lsp-server = "0.7"
lsp-types = "=0.95.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
