[package]
name = "tyrano-parser-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
tyrano-lexer = { path = "../tyrano-lexer" }
clap = { version = "4.5.51", features = ["derive"] }
log = { version = "0.4.29", features = ["serde", "std"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
thiserror = "2.0.17"

